--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <nav class="nav-menu d-none d-lg-block text-uppercase">
         <ul>
           
-          <li><a href="#services">Services</a></li>
+          <li><a href="#publishers">Publishers</a></li>
           <li><a href="#channels">Channels</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><a href="#">Login</a></li>
@@ -64,7 +64,7 @@
 
   
     <!-- ======= Services Section ======= -->
-    <section id="services" class="service section-bg">
+    <section id="publishers" class="service section-bg">
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
